--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Kitchen</title>
   <base href="/">
+  <link rel="preconnect" href="https://res.cloudinary.com">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/icon.png">
 </head>
