--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <title>Kitchen</title>
   <base href="/">
-  <link rel="preconnect" href="https://res.cloudinary.com">
+  <!-- <link rel="preconnect" href="https://res.cloudinary.com"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/icon.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet"> -->
 </head>
 <body>
   <app-root></app-root>
